Fixed z-index issue with help menu.

--- a/static/css/ooinetLayout04.css
+++ b/static/css/ooinetLayout04.css
@@ -32,8 +32,7 @@ body {
  padding:0px;
  width:100%;
  height:72px;
- z-index: 0;
- overflow:hidden;
+ z-index: 50;
  'outline:1px solid #000; /* temp */
 }
 
@@ -228,7 +227,7 @@ body {
  margin: 0px;
  width: 300px;
  height: 20px;
- z-index: 4;
+ z-index: 8;
  line-height: 20px;
  'outline:1px solid #000; /* temp */
 }
